# sutra-ai-engine

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  demo_hindi.json  demo_pro.json  docker-compose.yml  implementation_plan.md  implementation_plan_ai.md  implementation_plan_pralletscoring.md  intelligence_config.yaml  product_catalog.yaml  pyproject.toml  scanner_feeds.yaml  udise_agent_build_spec.md
agent_config/: ab_test_advisor.yaml  ad_creative.yaml  ai_trend_tracker.yaml  anomaly_alerter.yaml  area_comparator.yaml  attribution_analyst.yaml  audience_growth_strategist.yaml  audience_segmenter.yaml  audio_dubber.yaml  auto_publisher.yaml  auto_scheduler.yaml  ayurveda_advisor.yaml  battery_health.yaml  brand_advisor.yaml  brand_auditor.yaml  budget_optimizer.yaml  call_sentiment_analyzer.yaml  call_summarizer.yaml  campaign_strategist.yaml  cap_table_manager.yaml  caption_generator.yaml  carbon_footprint.yaml  caregiver_guide.yaml  catalog_enricher.yaml  charging_station_planner.yaml  chatbot_trainer.yaml  child_milestone_tracker.yaml  child_nutrition.yaml  churn_predictor.yaml  churn_reversal.yaml  click_shield.yaml  cold_call_scripter.yaml  competitor_analyst.yaml  complaint_drafter.yaml  compliance_checker.yaml  construction_estimator.yaml  content_grader.yaml  content_monetizer.yaml  content_repurpose.yaml  contract_analyzer.yaml  (+156 more)
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py
config/: access_control.yaml  languages.yaml  model_clusters.yaml  ollama_models.yaml  openapi.yaml  voice.yaml
docker/: Dockerfile  Dockerfile.bitnet  Dockerfile.worker  entrypoint.sh  nginx.conf
docs/: click_shield_design.md  (+5 more)
(+500 files in other folders)
